# vibe

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  POC.md  README.md  index.html  package.json  pnpm-lock.yaml
spec/: history.md  prd.md
spec/code/frontend/: cohesion-coupling.md  component-design.md  function-style.md  predictability.md  readability.md  review-checklist.md  styling.md
spec/code/rust/: concurrency.md  errors.md  idioms.md  tooling.md
src/: App.css  App.tsx  action.rs  ax.rs  capture.rs  detector.rs  event.rs  features.rs  floor.rs  lib.rs  main.rs  matcher.rs  rms.rs  runner.rs  screen.rs  wav.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs  mic.rs  pipeline.rs
src-tauri/src/action/: execute.rs  mod.rs  runner.rs
src-tauri/src/engine/: detector.rs  event.rs  features.rs  floor.rs  matcher.rs  mod.rs
src-tauri/src/layout/: ax.rs  mod.rs  placer.rs  probe.rs
src-tauri/src/routine/: exec_log.rs  mod.rs  store.rs
src-tauri/tests/: regression.rs
src/domains/routines/: api.ts  layout.ts  types.ts  useExecutionLog.ts  useRoutines.ts
src/domains/routines/components/: ExecutionLogPanel.tsx  RoutineEditor.tsx  RoutineSidebar.tsx
src/domains/settings/components/: SettingsView.tsx
src/shared/: theme.ts  useArmedConfirm.ts
src/shared/i18n/: LanguageContext.tsx  messages.ts
tests/: regression.rs
